fix deployment failing issue